objects/wkcc__WorkQueueItem__c.object
<CustomObject>
    <description>This object is used to coordinate work to be preformed</description>
    <fields>
        <fullName>wkcc__EncryptedDetails__c</fullName>
        <description>Used to store an encrypted serialized object with details needed for the queued job.</description>
        <label>Encrypted Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkcc__JobDetailHash__c</fullName>
        <description>Unique hash of details stored. Used to make sure duplicate jobs are not queued.</description>
        <externalId>true</externalId>
        <label>Job Detail Hash</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkcc__JobPriority__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to set priority for QueueItems; highest number will be selected first. If numbers match another QueueItem, the CreatedDate Desc is used. Default is 0.</description>
        <externalId>true</externalId>
        <label>Job Priority</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkcc__JobStatusDetails__c</fullName>
        <description>Details about the status set, usually used for error messages.</description>
        <label>Job Status Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkcc__JobStatus__c</fullName>
        <description>The status of the item in queue.</description>
        <label>Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkcc__JobType__c</fullName>
        <description>The type of job being performed, such as. Survey or Status Aggregation. This label helps identify what is in the process of running when you&apos;re looking at a list view.</description>
        <label>Job Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__ProcessAfter__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Used to delay processing until after a specified datetime. No guarantee when processing would take place other than definitely after the specified date</description>
        <label>Process After</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkcc__QIStatus__c</fullName>
        <description>The name of the QIStatus class corresponding to this QueueItem, must implement QIStatus interface. This class will be used to get the current status for this queue job. The processor will use this class to determine if this job can be executed now or if another job is running that should prevent this QueueItem from being worked on.</description>
        <label>QI Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__QIWorker__c</fullName>
        <description>The name of the QIWorker class corresponding to this QueueItem, must implement QIWorker interface. This class will be called by the processor when this job is selected to be worked.</description>
        <label>QI Worker</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Work Queue Item</label>
    <nameField>
        <displayFormat>WQI-{00000000}</displayFormat>
        <label>Work Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Queue Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>